--- a/adva.css
+++ b/adva.css
@@ -117,194 +117,194 @@ body{
 
 .fly-1{
     grid-area: fly-1;
-    background-image: url("IMG/adv/1-01.png");
+    background-image: url("./IMG/adv/1-01.png");
 }
 
 .fly-2{
     grid-area: fly-2;
     min-height: 61.5rem;
-    background-image: url("IMG/adv/1-02.png");
+    background-image: url("./IMG/adv/1-02.png");
 }
 
 .fly-3{
     grid-area: fly-3;
-    background-image: url("IMG/adv/1-03.png");
+    background-image: url("./IMG/adv/1-03.png");
 }
 
 .fly-4{
     grid-area: fly-4;
-    background-image: url("IMG/adv/1-04.png");
+    background-image: url("./IMG/adv/1-04.png");
 }
 
 .fly-5{
     grid-area: fly-5;
-    background-image: url("IMG/adv/1-05.png");
+    background-image: url("./IMG/adv/1-05.png");
 }
 
 .fly-6{
     grid-area: fly-6;
     min-height: 61.5rem;
-    background-image: url("IMG/adv/1-06.png");
+    background-image: url("./IMG/adv/1-06.png");
 }
 
 .fly-7{
     grid-area: fly-7;
     min-height: 61.5rem;
-    background-image: url("IMG/adv/1-07.png");
+    background-image: url("./IMG/adv/1-07.png");
 }
 
 .fly-8{
     grid-area: fly-8;
-    background-image: url("IMG/adv/1-08.png");
+    background-image: url("./IMG/adv/1-08.png");
 }
 
 .fly-9{
     grid-area: fly-9;
-    background-image: url("IMG/adv/1-09.png");
+    background-image: url("./IMG/adv/1-09.png");
 }
 
 .fly-10{
     grid-area: fly-10;
-    background-image: url("IMG/adv/1-10.png");
+    background-image: url("./IMG/adv/1-10.png");
 }
 
 .fly-11{
     grid-area: fly-11;
-    background-image: url("IMG/adv/1-11.png");
+    background-image: url("./IMG/adv/1-11.png");
 }
 
 .fly-12{
     grid-area: fly-12;
     min-height: 61.5rem;
-    background-image: url("IMG/adv/1-12.png");
+    background-image: url("./IMG/adv/1-12.png");
 }
 
 .fly-13{
     grid-area: fly-13;
     min-height: 61.5rem;
-    background-image: url("IMG/adv/1-13.png");
+    background-image: url("./IMG/adv/1-13.png");
 }
 
 .fly-14{
     grid-area: fly-14;
     min-height: 61.5rem;
-    background-image: url("IMG/adv/1-14.png");
+    background-image: url("./IMG/adv/1-14.png");
 }
 
 .fly-15{
     grid-area: fly-15;
-    background-image: url("IMG/adv/1-15.png");
+    background-image: url("./IMG/adv/1-15.png");
 }
 
 .fly-16{
     grid-area: fly-16;
-    background-image: url("IMG/adv/1-16.png");
+    background-image: url("./IMG/adv/1-16.png");
 }
 
 .fly-17{
     grid-area: fly-17;
-    background-image: url("IMG/adv/1-17.png");
+    background-image: url("./IMG/adv/1-17.png");
 }
 
 .fly-18{
     grid-area: fly-18;
-    background-image: url("IMG/adv/1-18.png");
+    background-image: url("./IMG/adv/1-18.png");
 }
 
 .fly-19{
     grid-area: fly-19;
-    background-image: url("IMG/adv/1-19.png");
+    background-image: url("./IMG/adv/1-19.png");
 }
 
 .fly-20{
     grid-area: fly-20;
-    background-image: url("IMG/adv/1-20.png");
+    background-image: url("./IMG/adv/1-20.png");
 }
 
 .fly-21{
     grid-area: fly-21;
-    background-image: url("IMG/adv/1-21.png");
+    background-image: url("./IMG/adv/1-21.png");
 }
 
 .fly-22{
     grid-area: fly-22;
-    background-image: url("IMG/adv/1-22.png");
+    background-image: url("./IMG/adv/1-22.png");
 }
 .fly-23{
     grid-area: fly-23;
-    background-image: url("IMG/adv/1-23.png");
+    background-image: url("./IMG/adv/1-23.png");
 }
 .fly-24{
     grid-area: fly-24;
-    background-image: url("IMG/adv/1-24.png");
+    background-image: url("./IMG/adv/1-24.png");
 }
 
 .fly-25{
     grid-area: fly-25;
-    background-image: url("IMG/adv/1-25.png");
+    background-image: url("./IMG/adv/1-25.png");
 }
 .fly-26{
     grid-area: fly-26;
-    background-image: url("IMG/adv/1-26.png");
+    background-image: url("./IMG/adv/1-26.png");
 }
 .fly-27{
     grid-area: fly-27;
-    background-image: url("IMG/adv/1-27.png");
+    background-image: url("./IMG/adv/1-27.png");
 }
 .fly-28{
     grid-area: fly-28;
-    background-image: url("IMG/adv/1-28.png");
+    background-image: url("./IMG/adv/1-28.png");
 }
 .fly-29{
     grid-area: fly-29;
-    background-image: url("IMG/adv/1-29.png");
+    background-image: url("./IMG/adv/1-29.png");
 }
 
 .fly-30{
     grid-area: fly-30;
-    background-image: url("IMG/adv/1-30.png");
+    background-image: url("./IMG/adv/1-30.png");
 }
 
 .fly-31{
     grid-area: fly-31;
-    background-image: url("IMG/adv/1-31.png");
+    background-image: url("./IMG/adv/1-31.png");
 }
 
 .fly-32{
     grid-area: fly-32;
-    background-image: url("IMG/adv/1-32.png");
+    background-image: url("./IMG/adv/1-32.png");
 }
 
 .fly-33{
     grid-area: fly-33;
     min-height: 61.5rem;
-    background-image: url("IMG/adv/1-33.jpg");
+    background-image: url("./IMG/adv/1-33.jpg");
 }
 
 .fly-34{
     grid-area: fly-34;
-    background-image: url("IMG/adv/1-34.jpg");
+    background-image: url("./IMG/adv/1-34.jpg");
 }
 
 .fly-35{
     grid-area: fly-35;
     min-height: 61.5rem;
-    background-image: url("IMG/adv/1-35.jpg");
+    background-image: url("./IMG/adv/1-35.jpg");
 }
 
 .fly-36{
     grid-area: fly-36;
-    background-image: url("IMG/adv/1-36.jpg");
+    background-image: url("./IMG/adv/1-36.jpg");
 }
 
 .fly-37{
     grid-area: fly-37;
-    background-image: url("IMG/adv/1-37.jpg");
+    background-image: url("./IMG/adv/1-37.jpg");
 }
 
 .fly-38{
     grid-area: fly-38;
-    background-image: url("IMG/adv/1-38.jpg");
+    background-image: url("./IMG/adv/1-38.jpg");
 }
 
 
