--- a/flyerstyle.css
+++ b/flyerstyle.css
@@ -116,165 +116,165 @@ body{
 .fly-1{
     grid-area: fly-1;
     min-height: 61.5rem;
-    background-image: url("IMG/Flyer/0.jpg");
+    background-image: url("./IMG/Flyer/0.jpg");
 }
 
 .fly-2{
     grid-area: fly-2;
-    background-image: url("IMG/Flyer/1.jpg");
+    background-image: url("./IMG/Flyer/1.jpg");
 }
 
 .fly-3{
     grid-area: fly-3;
-    background-image: url("IMG/Flyer/2.jpg");
+    background-image: url("./IMG/Flyer/2.jpg");
 }
 
 .fly-4{
     grid-area: fly-4;
-    background-image: url("IMG/Flyer/3.jpg");
+    background-image: url("./IMG/Flyer/3.jpg");
 }
 
 .fly-5{
     grid-area: fly-5;
-    background-image: url("IMG/Flyer/10.jpg");
+    background-image: url("./IMG/Flyer/10.jpg");
 }
 
 .fly-6{
     grid-area: fly-6;
     min-height: 61.5rem;
-    background-image: url("IMG/Flyer/11.jpg");
+    background-image: url("./IMG/Flyer/11.jpg");
 }
 
 .fly-7{
     grid-area: fly-7;
-    background-image: url("IMG/Flyer/12.jpg");
+    background-image: url("./IMG/Flyer/12.jpg");
 }
 
 .fly-8{
     grid-area: fly-8;
-    background-image: url("IMG/Flyer/13.jpg");
+    background-image: url("./IMG/Flyer/13.jpg");
 }
 
 .fly-9{
     grid-area: fly-9;
-    background-image: url("IMG/Flyer/14.jpg");
+    background-image: url("./IMG/Flyer/14.jpg");
 }
 
 .fly-10{
     grid-area: fly-10;
     min-height: 61.5rem;
-    background-image: url("IMG/Flyer/15.jpg");
+    background-image: url("./IMG/Flyer/15.jpg");
 }
 
 .fly-11{
     grid-area: fly-11;
-    background-image: url("IMG/Flyer/16.jpg");
+    background-image: url("./IMG/Flyer/16.jpg");
 }
 
 .fly-12{
     grid-area: fly-12;
-    background-image: url("IMG/Flyer/17.jpg");
+    background-image: url("./IMG/Flyer/17.jpg");
 }
 
 .fly-13{
     grid-area: fly-13;
-    background-image: url("IMG/Flyer/18.jpg");
+    background-image: url("./IMG/Flyer/18.jpg");
 }
 
 .fly-14{
     grid-area: fly-14;
-    background-image: url("IMG/Flyer/19.jpg");
+    background-image: url("./IMG/Flyer/19.jpg");
 }
 
 .fly-15{
     grid-area: fly-15;
-    background-image: url("IMG/Flyer/20.jpg");
+    background-image: url("./IMG/Flyer/20.jpg");
 }
 
 .fly-16{
     grid-area: fly-16;
-    background-image: url("IMG/Flyer/21.jpg");
+    background-image: url("./IMG/Flyer/21.jpg");
 }
 
 .fly-17{
     grid-area: fly-17;
-    background-image: url("IMG/Flyer/22.jpg");
+    background-image: url("./IMG/Flyer/22.jpg");
 }
 
 .fly-18{
     grid-area: fly-18;
-    background-image: url("IMG/Flyer/23.jpg");
+    background-image: url("./IMG/Flyer/23.jpg");
 }
 
 .fly-19{
     grid-area: fly-19;
     min-height: 61.5rem;
-    background-image: url("IMG/Flyer/24.jpg");
+    background-image: url("./IMG/Flyer/24.jpg");
 }
 
 .fly-20{
     grid-area: fly-20;
-    background-image: url("IMG/Flyer/25.jpg");
+    background-image: url("./IMG/Flyer/25.jpg");
 }
 
 .fly-21{
     grid-area: fly-21;
-    background-image: url("IMG/Flyer/26.jpg");
+    background-image: url("./IMG/Flyer/26.jpg");
 }
 
 .fly-22{
     grid-area: fly-22;
-    background-image: url("IMG/Flyer/27.jpg");
+    background-image: url("./IMG/Flyer/27.jpg");
 }
 .fly-23{
     grid-area: fly-23;
-    background-image: url("IMG/Flyer/28.jpg");
+    background-image: url("./IMG/Flyer/28.jpg");
 }
 .fly-24{
     grid-area: fly-24;
-    background-image: url("IMG/Flyer/29.jpg");
+    background-image: url("./IMG/Flyer/29.jpg");
 }
 
 .fly-25{
     grid-area: fly-25;
-    background-image: url("IMG/Flyer/30.jpg");
+    background-image: url("./IMG/Flyer/30.jpg");
 }
 .fly-26{
     grid-area: fly-26;
-    background-image: url("IMG/Flyer/31.jpg");
+    background-image: url("./IMG/Flyer/31.jpg");
 }
 .fly-27{
     grid-area: fly-27;
-    background-image: url("IMG/Flyer/32.jpg");
+    background-image: url("./IMG/Flyer/32.jpg");
 }
 .fly-28{
     grid-area: fly-28;
-    background-image: url("IMG/Flyer/33.jpg");
+    background-image: url("./IMG/Flyer/33.jpg");
 }
 .fly-29{
     grid-area: fly-29;
-    background-image: url("IMG/Flyer/34.jpg");
+    background-image: url("./IMG/Flyer/34.jpg");
 }
 
 .fly-30{
     grid-area: fly-30;
     min-height: 61.5rem;
-    background-image: url("IMG/Flyer/35.jpg");
+    background-image: url("./IMG/Flyer/35.jpg");
 }
 
 .fly-31{
     grid-area: fly-31;
-    background-image: url("IMG/Flyer/36.jpg");
+    background-image: url("./IMG/Flyer/36.jpg");
 }
 
 .fly-32{
     grid-area: fly-32;
-    background-image: url("IMG/Flyer/37.jpg");
+    background-image: url("./IMG/Flyer/37.jpg");
 }
 
 .fly-33{
     grid-area: fly-33;
-    background-image: url("IMG/Flyer/38.jpg");
+    background-image: url("./IMG/Flyer/38.jpg");
 }
 
 
