--- a/pixel.css
+++ b/pixel.css
@@ -116,88 +116,88 @@ body{
 .fly-1{
     grid-area: fly-1;
     min-height: 61.5rem;
-    background-image: url("IMG/pixel/1-01.jpg");
+    background-image: url("./IMG/pixel/1-01.jpg");
 }
 
 .fly-2{
     grid-area: fly-2;
     min-height: 61.5rem;
-    background-image: url("IMG/pixel/1-02.jpg");
+    background-image: url("./IMG/pixel/1-02.jpg");
 }
 
 .fly-3{
     grid-area: fly-3;
-    background-image: url("IMG/pixel/1-03.jpg");
+    background-image: url("./IMG/pixel/1-03.jpg");
 }
 
 .fly-4{
     grid-area: fly-4;
     min-height: 61.5rem;
-    background-image: url("IMG/pixel/1-04.jpg");
+    background-image: url("./IMG/pixel/1-04.jpg");
 }
 
 .fly-5{
     grid-area: fly-5;
     min-height: 61.5rem;
-    background-image: url("IMG/pixel/1-05.jpg");
+    background-image: url("./IMG/pixel/1-05.jpg");
 }
 
 .fly-6{
     grid-area: fly-6;
     min-height: 61.5rem;
-    background-image: url("IMG/pixel/1-06.jpg");
+    background-image: url("./IMG/pixel/1-06.jpg");
 }
 
 .fly-7{
     grid-area: fly-7;
     min-height: 61.5rem;
-    background-image: url("IMG/pixel/1-07.jpg");
+    background-image: url("./IMG/pixel/1-07.jpg");
 }
 
 .fly-8{
     grid-area: fly-8;
     min-height: 61.5rem;
-    background-image: url("IMG/pixel/1-08.jpg");
+    background-image: url("./IMG/pixel/1-08.jpg");
 }
 
 .fly-9{
     grid-area: fly-9;
-    background-image: url("IMG/pixel/1-09.jpg");
+    background-image: url("./IMG/pixel/1-09.jpg");
 }
 
 .fly-10{
     grid-area: fly-10;
-    background-image: url("IMG/pixel/1-10.jpg");
+    background-image: url("./IMG/pixel/1-10.jpg");
 }
 
 .fly-11{
     grid-area: fly-11;
-    background-image: url("IMG/pixel/1-11.jpg");
+    background-image: url("./IMG/pixel/1-11.jpg");
 }
 
 .fly-12{
     grid-area: fly-12;
-    background-image: url("IMG/pixel/1-12.jpg");
+    background-image: url("./IMG/pixel/1-12.jpg");
 }
 
 .fly-13{
     grid-area: fly-13;
-    background-image: url("IMG/pixel/1-13.jpg");
+    background-image: url("./IMG/pixel/1-13.jpg");
 }
 
 .fly-14{
     grid-area: fly-14;
-    background-image: url("IMG/pixel/1-14.jpg");
+    background-image: url("./IMG/pixel/1-14.jpg");
 }
 
 .fly-15{
     grid-area: fly-15;
-    background-image: url("IMG/pixel/1-15.jpg");
+    background-image: url("./IMG/pixel/1-15.jpg");
 }
 
 .fly-16{
     grid-area: fly-16;
-    background-image: url("IMG/pixel/1-16.jpg");
+    background-image: url("./IMG/pixel/1-16.jpg");
 }
 
 .fly-17{
@@ -207,18 +207,18 @@ body{
 
 .fly-18{
     grid-area: fly-18;
-    background-image: url("IMG/pixel/1-18.jpg");
+    background-image: url("./IMG/pixel/1-18.jpg");
 }
 
 .fly-19{
     grid-area: fly-19;
-    background-image: url("IMG/pixel/1-19.jpg");
+    background-image: url("./IMG/pixel/1-19.jpg");
 }
 
 .fly-20{
     grid-area: fly-20;
     min-height: 61.5rem;
-    background-image: url("IMG/pixel/1-20.jpg");
+    background-image: url("./IMG/pixel/1-20.jpg");
 }
 
 .fly-21{
@@ -228,24 +228,24 @@ body{
 
 .fly-22{
     grid-area: fly-22;
-    background-image: url("IMG/pixel/1-22.jpg");
+    background-image: url("./IMG/pixel/1-22.jpg");
 }
 .fly-23{
     grid-area: fly-23;
-    background-image: url("IMG/pixel/1-23.jpg");
+    background-image: url("./IMG/pixel/1-23.jpg");
 }
 .fly-24{
     grid-area: fly-24;
-    background-image: url("IMG/pixel/1-24.jpg");
+    background-image: url("./IMG/pixel/1-24.jpg");
 }
 
 .fly-25{
     grid-area: fly-25;
-    background-image: url("IMG/pixel/1-25.jpg");
+    background-image: url("./IMG/pixel/1-25.jpg");
 }
 .fly-26{
     grid-area: fly-26;
-    background-image: url("IMG/pixel/1-26.jpg");
+    background-image: url("./IMG/pixel/1-26.jpg");
 }
 
 
